--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.4.0",
-        "yiisoft/yii2": "~2.0.45",   
-		"yiisoft/yii2-bootstrap4": "^2.0",		
-		"yiisoft/yii2-bootstrap5": "~2.0.2",
+        "php": "~7.4.0|^8.1",
+        "yiisoft/yii2": "~2.0.45",   			
+		"yiisoft/yii2-bootstrap5": "2.0.2",
         "yiisoft/yii2-swiftmailer": "~2.0.3",
-        "intervention/image": "^2.7",
+        
+        "intervention/image": "*",
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-widget-select2": "^2.2",
         "mihaildev/yii2-ckeditor": "^1.0",
@@ -36,7 +36,8 @@
         "kartik-v/yii2-field-range": "*",
         "kartik-v/yii2-bootstrap4-dropdown": "^1.0",		
         "bower-asset/animate.css": "^4.1",
-        "npm-asset/svg.select.js": "3.0.1",
+        "npm-asset/apexcharts": "*",    
+        "npm-asset/fancyapps--ui": "^4",   
         "kartik-v/yii2-bootstrap5-dropdown": "1.0.x-dev",
         "2amigos/yii2-ckeditor-widget": "^2.2"
     },
