--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ Thumbs.db
 
 # composer itself is not needed
 composer.phar
+composer.lock
 
 # Mac DS_Store Files
 .DS_Store
@@ -48,3 +49,4 @@ tests/_support/_generated
 
 
 /config/dbDKS.php
+/composer.lock
