--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
-version: '2'
+version: '3'
+
 services:
   php:
-    image: yiisoftware/yii2-php:7.1-apache
+    image: tamuarchi/yii2-mssql:latest
     volumes:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ./:/app:delegated
     ports:
       - '8000:80'
+    depends_on:
+      - mssql
+  mssql:
+    image: mcr.microsoft.com/mssql/server:2017-latest
+    ports:
+      - '1433:1433'
+    environment:
+      ACCEPT_EULA: Y
+      SA_PASSWORD: P@ssw0rd  
+      MSSQL_LCID: "1049"    
+      TZ: Asia/Yekaterinburg
+    volumes:
+      - ./runtime/mssql/data:/var/opt/mssql/data
+      - ./runtime/mssql/log:/var/opt/mssql/log
+      - ./runtime/mssql/secrets:/var/opt/mssql/secrets
