--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,11 @@
         "dicr/yii2-file": "^1.2",
         "eluhr/yii2-aceeditor": "dev-master",
         "thtmorais/yii2-pace": "dev-master",
-        "coderius/yii2-upload-file-behavior": "dev-master"
+        "coderius/yii2-upload-file-behavior": "dev-master",
+        "npm-asset/jstree": "~3.3.10",
+        "bower-asset/font-awesome": "6.x-dev",
+        "npm-asset/ekeep-flip-numbers": "^1.8",
+        "npm-asset/unicode-emoji-json": "^0.3.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
