--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
     "require": {
         "php": "~7.4.0|^8.1",
         "yiisoft/yii2": "~2.0.45",   			
-		"yiisoft/yii2-bootstrap5": "2.0.2",
-        "yiisoft/yii2-swiftmailer": "~2.0.3",
-        
+	    "yiisoft/yii2-bootstrap5": "2.0.2",
+        "yiisoft/yii2-swiftmailer": "~2.0.3",        
         "intervention/image": "*",
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-widget-select2": "^2.2",
@@ -29,7 +28,7 @@
         "kartik-v/yii2-export": "^1.4",
         "kartik-v/yii2-editable": "^1.7",
         "kartik-v/yii2-tabs-x": "^1.2",
-		"ext-mbstring": "*",
+	    "ext-mbstring": "*",
         "kosoukhov/ldap": "^1.0",
         "yiisoft/yii2-httpclient": "*",        
         "kartik-v/yii2-editors": "^1.0",
@@ -53,14 +52,15 @@
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.2.0",
         "yiisoft/yii2-faker": "~2.0.0",
+        "phpunit/phpunit": "~9.5.0",
         "codeception/codeception": "^5.0 || ^4.0",
-		"codeception/lib-innerbrowser": "^3.0 || ^1.1",
-		"codeception/module-asserts": "^3.0 || ^1.1",
-		"codeception/module-yii2": "^1.1",
-		"codeception/module-filesystem": "^3.0 || ^1.1",
+        "codeception/lib-innerbrowser": "^3.0 || ^1.1",
+        "codeception/module-asserts": "^3.0 || ^1.1",
+        "codeception/module-yii2": "dev-master",
+        "codeception/module-filesystem": "^3.0 || ^1.1",
         "codeception/verify": "^2.2",
         "codeception/specify": "~0.4.6",
-        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
+        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"        
     },
     "config": {
         "process-timeout": 1800,
